--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,39 +7,37 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = csrf_meta_tags
   %body
-    %div.header
+    .header
       グループを作成しました
-    %div.top-contents
-      %div.top-contents__text1
+    .top-contents
+      .top-contents__text1
         test-user
-      %div.top-contents__fontawesome
-        = link_to groups_new_path do
-          %i.fa.fa-edit
-        = link_to users_edit_path do
-          %i.fa.fa-cog
-      %div.top-contents__right
-        %div.top-contents__group
-          %div.top-contents__text2
+      .top-contents__fontawesome
+        %i.fa.fa-edit
+        %i.fa.fa-cog
+      .top-contents__right
+        .top-contents__group
+          .top-contents__text2
             test-group
-          %div.top-contents__text3
+          .top-contents__text3
             Member : test-user
-        %div.top-contents__edit-button
+        .top-contents__edit-button
           Edit
-    %div.main-contents
-      %div.main-contents__left
-        %div.main-contents__left-wrapper
+    .main-contents
+      .main-contents__left
+        .main-contents__left-wrapper
           = render 'groups/group'
-      %div.main-contents__right
-        %div.main-contents__right-wrapper
+      .main-contents__right
+        .main-contents__right-wrapper
           = render 'messages/message'
-        %div.main-contents__bottom
-          %div.main-contents__wrapper
-            %div.main-contents__message
-              %div.main-contents__text1 
+        .main-contents__bottom
+          .main-contents__wrapper
+            .main-contents__message
+              .main-contents__text1 
                 type a message
               %label.main-contents__upload-label{for: "upload-icon"}
                 %input.main-contents__upload-input{type: "file", id: "upload-icon"}
                   %i.fa.fa-picture-o
-            %div.main-contents__send-button
-              %div.main-contents__text2
+            .main-contents__send-button
+              .main-contents__text2
                 Send
