--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,236 +1,7 @@
 @import "./reset";
 @import "font-awesome";
 @import "./variable";
+@import "./header";
+@import "./top-contents";
+@import "./main-contents";
 
-.header {
-  width: 100vw;
-  text-align: center;
-  color: $color1;
-  background-color: $color3;
-}
-
-.top-contents {
-  height: 100px;
-  width: 100vw;
-  position: relative;
-  background-color: $color4;
-  &__text1 {
-    position: absolute;
-    left: 20px;
-    line-height: 100px;
-    font-size: 16px;
-    font-weight: bold;
-    color: $color2;
-  }
-  &__fontawesome {
-    position: absolute;
-    line-height: 100px;
-    color: $color2;
-    right: calc(100vw - 280px);
-  }
-  .fa.fa-edit {
-    color: $color1;
-  }
-  .fa.fa-cog {
-    color: $color1;
-  }
-  &__right {
-    position: relative;
-    left: 300px;
-    height: 99px;
-    width: calc(100vw - 300px);
-    background-color: $color1;
-    border-bottom: solid #eeeeee;
-    border-bottom-width: 1px;
-  }
-  &__group {
-    padding: 35px 0 0 40px;
-  }
-  &__text2 {
-    font-size: 20px;
-    color: #333333;
-  }
-  &__text3 {
-    padding-top: 15px;
-    left: 40px;
-    font-size: 12px;
-    color: $color6;
-  }
-  &__edit-button {
-    position: absolute;
-    height: 40px;
-    top: 28px;
-    right: 40px;
-    line-height: 40px;
-    text-align: center;
-    color: $color3;
-    border: solid thin $color3;
-    padding: 0 20px;
-  }
-}
-
-.main-contents {
-  height: calc(100vh - 100px);
-  width: 100vw;
-  &__left {
-    position: relative;
-    float: left;
-    height: calc(100vh - 100px);
-    width: 300px;
-    background-color: #2f3e51;
-  }
-  &__left-wrapper {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    width: 260px;
-  }
-  &__group-name1 {
-    font-size: 15px;
-    font-weight: bold;
-    color: $color2;
-  }
-  &__last-comment1 {
-    padding-top: 5px;
-    padding-bottom: 40px;
-    font-size: 11px;
-    font-weight: bold;
-    color: $color2;
-  }
-  &__group-name2 {
-    font-size: 15px;
-    font-weight: bold;
-    color: $color2;
-  }
-  &__last-comment2 {
-    padding-top: 5px;
-    padding-bottom: 40px;
-    font-size: 11px;
-    font-weight: bold;
-    color: $color2;
-  }
-  &__group-name3 {
-    font-size: 15px;
-    font-weight: bold;
-    color: $color2;
-  }
-  &__last-comment3 {
-    padding-top: 5px;
-    padding-bottom: 40px;
-    font-size: 11px;
-    font-weight: bold;
-    color: $color2;
-  }
-  &__right {
-    position: relative;
-    float: right;
-    height: calc(100vh - 100px);
-    width: calc(100vw - 300px);
-    background-color: #fafafa;
-  }
-  &__right-wrapper {
-    position: absolute;
-    top: 46px;
-    left: 40px;
-    width: calc(100vw - 380px);
-  }
-  &__member1 {
-    float: left;
-    padding-bottom: 10px;
-    width: calc(100vw - 380px);
-  }
-  &__member-name1 {
-    float: left;
-    padding-right: 10px;
-    font-size: 16px;
-    font-weight: bold;
-    color: $color5;
-  }
-  &__time1 {
-    float: left;
-    font-size: 12px;
-    color: $color6;
-  }
-  &__member-comment1 {
-    padding-bottom: 40px;
-    font-size: 14px;
-    color: $color5;
-  }
-  &__member2 {
-    float: left;
-    padding-bottom: 10px;
-    width: calc(100vw - 380px);
-  }
-  &__member-name2 {
-    float: left;
-    padding-right: 10px;
-    font-size: 16px;
-    font-weight: bold;
-    color: $color5;
-  }
-  &__time2 {
-    float: left;
-    font-size: 12px;
-    color: $color6;
-  }
-  &__member-comment2 {
-    padding-bottom: 40px;
-    font-size: 14px;
-    color: $color5;
-  }
-  &__bottom {
-    position: relative;
-    top: calc(100vh - 190px);
-    height: 90px;
-    width: calc(100vw - 300px);
-    background-color: #ddd;
-  }
-  &__wrapper {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    height: 50px;
-    width: calc(100vw - 380px);
-  }
-  &__message {
-    position: relative;
-    float: left;
-    height: 50px;
-    width: calc(100vw - 495.344px);
-    background-color: $color1;
-  }
-  &__text1 {
-    float: left;
-    padding-left: 10px;
-    line-height: 50px;
-    font-size: 16px;
-    color: $color5;
-  }
-  &__upload-label {
-    cursor: pointer;
-  }
-  &__upload-input {
-    display: none;
-  }
-  .fa.fa-picture-o {
-    position: absolute;
-    right: 10px;
-    line-height: 50px;
-    font-size: 20.8px;
-  }
-  &__send-button {
-    float: left;
-    margin-left: 15px;
-    height: 50px;
-    background-color: $color3;
-  }
-  &__text2 {
-    line-height: 50px;
-    text-align: center;
-    color: $color1;
-    padding: 0 30px;
-  }
-}
