Create and place scss properly

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,10 @@
 @import "./reset";
 @import "font-awesome";
-@import "./variable";
-@import "./header";
-@import "./top-contents";
-@import "./main-contents";
+@import "./user.scss";
+@import "./colors";
+@import "./size";
+@import "./flash.scss";
+@import "./side_bar.scss";
+@import "./group.scss";
+@import "./chat.scss"
 
