--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,32 +1,22 @@
-.top-contents
-  .top-contents__text1
-    test-user
-  .top-contents__fontawesome
-    %i.fa.fa-edit
-    %i.fa.fa-cog
-  .top-contents__right
-    .top-contents__group
-      .top-contents__text2
-        test-group
-      .top-contents__text3
-        Member : test-user
-    .top-contents__edit-button
-      Edit
-.main-contents
-  .main-contents__left
-    .main-contents__left-wrapper
-      = render 'groups/group'
-  .main-contents__right
-    .main-contents__right-wrapper
-      = render 'messages/message'
-    .main-contents__bottom
-      .main-contents__wrapper
-        .main-contents__message
-          .main-contents__text1 
-            type a message
-          %label.main-contents__upload-label{for: "upload-icon"}
-            %input.main-contents__upload-input{type: "file", id: "upload-icon"}
-              %i.fa.fa-picture-o
-        .main-contents__send-button
-          .main-contents__text2
-            Send
+.chat
+  .header
+    .left-header
+      .left-header__title
+      .left-header__members
+    .right-header
+      .right-header__button
+  .messages
+    .message
+      .upper-message
+        .upper-message__user-name
+        .upper-message__date
+      .lower-message
+        .lower-message__content
+  .form
+    .form__message
+      type a message
+    %label.form__mask{for: "upload-icon"}
+      %input.form__mask__image{type: "file", id: "upload-icon"}
+        %i.fa.fa-picture-o
+    .form__submit
+      Send
