--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -118,7 +118,7 @@
 
 //ここから
 
-.side-bar {
+/* .side-bar {
   box-sizing: border-box;
   color: $white;
   width: 300px;
@@ -164,5 +164,5 @@
     }
   }
 }
-
+ */
 //ここまで
