--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -65,6 +65,10 @@
           font-size: 14px;
           margin-bottom: 40px;
         }
+        &__image {
+          width: 200px;
+          height: 160px;
+        }
       }
     }
   }
