--- a/app/assets/stylesheets/side_bar.scss
+++ b/app/assets/stylesheets/side_bar.scss
@@ -30,6 +30,7 @@
     background-color: $side_blue_light;
     height: calc(100vh - 100px);
     padding: 0 20px;
+    overflow: auto;
     .group {
       box-sizing: border-box;
       padding: 20px 0 40px;
@@ -43,5 +44,8 @@
         margin-top: 5px;
       }
     }
+  }
+  .groups::-webkit-scrollbar {
+    display: none;
   }
 }
