--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,13 +4,15 @@
     .left-header
       .left-header__title
         = @group.name
-      .left-header__members
+      %ul.left-header__members
         Member：
         - @group.users.each do |user|
-          = user.name + ' '
-    .right-header
-      .right-header__button
+          %li.left-header__members__member
+            = user.name
+    %a.right-header{href: "/groups/#{@group.id}/edit"}
+      .right-header__edit-btn
         Edit
+
   .messages
     = render partial: 'message', collection: @messages
   .form
